# react-native-opacity

./: .gitignore  CONTRIBUTING.md  README.md  app.plugin.js  lefthook.yml  package.json  react-native-opacity.podspec  react-native.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
android/: CMakeLists.txt  build.gradle  consumer-rules.pro  cpp-adapter.cpp  gradle.properties
android/cpp/: OpacityCore.cpp
android/src/main/: AndroidManifest.xml
android/src/main/assets/extension/: background.js  manifest.json
android/src/main/cpp/: CMakeLists.txt  OpacityCore.cpp
android/src/main/java/com/opacity/: OpacityModule.kt  OpacityPackage.kt
android/src/main/java/com/opacitylabs/opacitycore/: CookieResultReceiver.kt  CryptoManager.kt  InAppBrowserActivity.kt  JsonConverter.kt  JsonUtils.kt  OpacityCore.kt  OpacityError.kt  OpacityModule.kt  OpacityPackage.kt  OpacityResponse.kt
android/src/main/java/com/opacitylabs/rn/: OpacityModule.kt  OpacityPackage.kt  Utils.kt
cpp/: NativeOpacityTurboModule.cpp  NativeOpacityTurboModule.h  macros.h  react-native-opacity.cpp  react-native-opacity.h
example/: Gemfile  app.json  babel.config.js  package.json
example/.maestro/: open-browser-must-succeed.yaml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/OpacityExample.xcodeproj/: project.pbxproj
example/ios/OpacityExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  opacitySDK.ts  utils.ts
expo-plugin/: tsconfig.json
expo-plugin/src/: index.ts
include/: opacity.h
ios/: ModalWebViewController.h  ModalWebViewController.mm  OnLoad.mm  Opacity.h  Opacity.mm  OpacityIOSHelper.h  OpacityIOSHelper.mm  OpacityModule.h  OpacityModule.mm  OpacityObjCWrapper.h  OpacityObjCWrapper.mm  Reachability.m  helper_functions.h  helper_functions.mm  sdk.h
ios/opacity.xcframework/: Info.plist
src/: NativeOpacity.ts  index.tsx
(+19 files in other folders)
